xor_39386451_stderr.txt
  File "xor_base.py", line 71
    restore_best_weights=True,
                       ^
SyntaxError: invalid syntax
